# automate-clock-in-and-out

./: .gitignore
functions/clockin_service/: .dockerignore  Dockerfile  main.py  pyproject.toml  tox.ini
iac/account-tfvars/: terraform.tfvars.example
iac/architecture/: main.tf  providers.tf  variables.tf
iac/architecture/account-tfvars/: terraform.tfvars.example
iac/architecture/modules/clockin_lambda/: main.tf
iac/modules/clockin_service/: main.tf  outputs.tf  secrets_manager.tf  variables.tf
iac/modules/lambda_docker/: main.tf  outputs.tf  variables.tf
talana_clock_in/: clock_in_endpoint.txt  clock_in_request.json  clock_in_response.json
talana_clock_out/: clock_out_endpoint.txt  clock_out_request.json  clock_out_response.json
talana_login/: login_ednpoint.txt  login_request.json  login_response.json
