[tool.poetry]
name = "checkin-service"
version = "1.0.0"
description = "AWS Lambda function for automated work check-in/out."
authors = ["Paolo Falcon pfalcon@morrisopazo.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
requests = "^2.32.0"
pydantic = "^2.12.0"
boto3 = "^1.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"