[tool.poetry]
name = "clockin-service"
version = "1.0.0"
description = "AWS Lambda function for automated work clock-in/out."
authors = ["Paolo Falcon pfalcon@morrisopazo.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
requests = "^2.32.0"
pydantic = "^2.12.0"
boto3 = "^1.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
moto = {extras = ["secretsmanager"], version = "^5.0.0"}
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"